add back recipe event & registry event doc